# MemoTrie-comonads

./: MemoTrie-comonads.cabal  comonad-extras.cabal
src/Control/Comonad/Store/: MemoTrie.hs
src/Control/Comonad/Traced/: MemoTrie.hs
test/tasty/: test.hs
