name:          MemoTrie-comonads
category:      Control, Comonads
version:       0.1.0.0
license:       BSD3
cabal-version: >= 1.8
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Justus Sagemüller <(@) jsag $ hvl.no>
stability:     experimental
homepage:      http://github.com/leftaroundabout/MemoTrie-comonad
bug-reports:   http://github.com/leftaroundabout/MemoTrie-comonad/issues
copyright:     Copyright (C) 2011-2013 Edward A. Kmett
synopsis:      Exotic comonad transformers
description:   Exotic comonad transformers
build-type:    Simple
extra-source-files: .travis.yml

source-repository head
  type: git
  location: git://github.com/leftaroundabout/MemoTrie-comonad.git

library
  hs-source-dirs: src
  extensions: CPP

  other-extensions:
    FlexibleInstances
    MultiParamTypeClasses
    FunctionalDependencies
    UndecidableInstances
    Rank2Types
    MultiParamTypeClasses

  build-depends:
    array                >= 0.3   && < 0.6,
    base                 >= 4     && < 5,
    containers           >= 0.4   && < 0.6,
    comonad              >= 4     && < 6,
    distributive         >= 0.3.2 && < 1,
    semigroupoids        >= 4     && < 6,
    transformers         >= 0.2   && < 0.6,
    MemoTrie             >= 0.4.9 && < 0.7,
    QuickCheck           >= 2.10 && < 2.20

  exposed-modules:
    Control.Comonad.Store.MemoTrie
    Control.Comonad.Traced.MemoTrie

  ghc-options: -Wall
  hs-source-dirs: src

test-suite tasty
  main-is:         test.hs
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test/tasty
  build-depends:   base
                   , QuickCheck
                   , tasty, tasty-quickcheck
                   , comonad, MemoTrie-comonads
  ghc-options: -threaded "-with-rtsopts -N8 -M2G"
  default-language:    Haskell2010
